[package]
name = "wow112_extension"
version = "0.1.0"
edition = "2021"

[dependencies]
retour = { version = "0.3", features = ["thiscall-abi"] }
once_cell = "1.18.0"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemServices"] }

[lib]
crate-type = ["cdylib"]
