[package]
name = "darkiron_extension"
version = "0.1.0"
edition = "2021"

[dependencies]
darkiron_macro = { path = "../darkiron_macro" }
once_cell = "1.18.0"
retour = { version = "0.3", features = ["thiscall-abi"] }
imgui = "0.10.0"
winapi = { version = "0.3" }
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem"
] }
image = "0.24.6"

[lib]
name = "extension"
crate-type = ["cdylib"]
