[package]
name = "wow112_extension"
version = "0.1.0"
edition = "2021"

[dependencies]
wow_mem = { path = "../wow_mem" }
retour = { version = "0.3", features = ["thiscall-abi"] }
once_cell = "1.18.0"
winapi = { version = "0.3", features = ["d3d9", "d3d9types"] }
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_OpenGL",
] }
imgui = "0.10.0"
imgui-dx9-renderer = "0.10.0"

[lib]
crate-type = ["cdylib"]
