[package]
name = "wow112_extension"
version = "0.1.0"
edition = "2021"

[dependencies]
wow_mem = { path = "../wow_mem" }
once_cell = "1.18.0"
retour = { version = "0.3", features = ["thiscall-abi"] }
imgui = "0.10.0"
winapi = { version = "0.3" }
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_OpenGL",
] }

[lib]
crate-type = ["cdylib"]
